# analyze

./: CMakeLists.txt  README.md  pa_pre_commit.sh
src/: AbstractGlobalVectorFunctionInc.hpp  AbstractLinearStress.cpp  AbstractLinearStress.hpp  AbstractLocalMeasure.hpp  AbstractPlatoMesh.hpp  AbstractTMKinetics.hpp  AbstractVectorFunctionVMS.hpp  AbstractYieldStress.hpp  AdjointComplexRayleighDamping.hpp  AdjointStructuralDynamicsResidual.hpp  AnalyzeAppUtils.cpp  AnalyzeMacros.hpp  AnalyzeOutput.hpp  Analyze_App.cpp  Analyze_App.hpp  Analyze_Diagnostics.hpp  Analyze_MPMD.cpp  ApplyConstraints.hpp  ApplyPenalty.hpp  ApplyProjection.hpp  ApplyWeighting.hpp  Assembly.hpp  BLAS1.hpp  BLAS2.hpp  BLAS3.hpp  Bar2.hpp  Bar3.hpp  BaseExpInstMacros.hpp  BasicLocalScalarFunction.hpp  BodyLoads.hpp  CMakeLists.txt  CellForcing.hpp  CellVolume.hpp  ComplexElasticEnergy.hpp  ComplexInertialEnergy.hpp  ComplexLinearStress.hpp  ComplexRayleighDamping.hpp  ComplexStrain.hpp  ComplexStressDivergence.hpp  ComputeCauchyStress.hpp  (+214 more)
src/alg/: AmgXLinearSolver.cpp  AmgXLinearSolver.hpp  AmgXSparseLinearProblem.hpp  Analyze.cpp  Basis.cpp  Basis.hpp  CrsMatrix.hpp  CrsMatrixUtils.hpp  EpetraLinearSolver.cpp  EpetraLinearSolver.hpp  PlatoAbstractSolver.cpp  PlatoAbstractSolver.hpp  PlatoSolverFactory.cpp  PlatoSolverFactory.hpp  TachoLinearSolver.cpp  TachoLinearSolver.hpp  TpetraLinearSolver.cpp  TpetraLinearSolver.hpp
src/base/: CriterionBase.hpp  Database.cpp  Database.hpp  ProblemEvaluatorBase.hpp  ResidualBase.hpp  SupportedParamOptions.cpp  SupportedParamOptions.hpp  WorksetBase.hpp  WorksetBuilderBase.hpp
src/element/: ThermoElasticElement.hpp
src/elliptic/: AbstractScalarFunction.hpp  AbstractVectorFunction.hpp  AugLagStrengthCriterion.cpp  AugLagStrengthCriterion.hpp  AugLagStrengthCriterion_decl.hpp  AugLagStrengthCriterion_def.hpp  DivisionFunction.cpp  DivisionFunction.hpp  DivisionFunction_def.hpp  EMStressPNorm.cpp  EMStressPNorm.hpp  EMStressPNorm_decl.hpp  EMStressPNorm_def.hpp  EffectiveEnergy.cpp  EffectiveEnergy.hpp  EffectiveEnergy_decl.hpp  EffectiveEnergy_def.hpp  ElastostaticResidual.cpp  ElastostaticResidual.hpp  ElastostaticResidual_decl.hpp  ElastostaticResidual_def.hpp  ElectroelastostaticResidual.cpp  ElectroelastostaticResidual.hpp  ElectroelastostaticResidual_def.hpp  EvaluationTypes.hpp  ExpInstMacros.hpp  FluxPNorm.cpp  FluxPNorm.hpp  FluxPNorm_decl.hpp  FluxPNorm_def.hpp  InternalElasticEnergy.cpp  InternalElasticEnergy.hpp  InternalElasticEnergy_decl.hpp  InternalElasticEnergy_def.hpp  InternalElectroelasticEnergy.cpp  InternalElectroelasticEnergy.hpp  InternalElectroelasticEnergy_decl.hpp  InternalElectroelasticEnergy_def.hpp  InternalThermalEnergy.cpp  InternalThermalEnergy.hpp  (+64 more)
src/geometric/: AbstractScalarFunction.hpp  DivisionFunction.cpp  DivisionFunction.hpp  DivisionFunction_def.hpp  ExpInstMacros.hpp  GeometricalElement.hpp  GeometryMisfit.hpp  GeometryScalarFunction.cpp  GeometryScalarFunction.hpp  GeometryScalarFunction_decl.hpp  GeometryScalarFunction_def.hpp  LeastSquaresFunction.cpp  LeastSquaresFunction.hpp  LeastSquaresFunction_def.hpp  MassMoment.cpp  MassMoment.hpp  MassMoment_def.hpp  MassPropertiesFunction.cpp  MassPropertiesFunction.hpp  MassPropertiesFunction_def.hpp  ScalarFunctionBaseFactory.cpp  ScalarFunctionBaseFactory.hpp  ScalarFunctionBaseFactory_def.hpp  Volume.hpp  WeightedSumFunction.cpp  WeightedSumFunction.hpp  WeightedSumFunction_def.hpp  WorksetBase.hpp
src/helmholtz/: AddMassTerm.hpp  ExpInstMacros.hpp  FixedDomainDofs.hpp  HelmholtzElement.hpp  HelmholtzFlux.hpp  HelmholtzResidual.cpp  HelmholtzResidual.hpp  Problem.cpp  Problem.hpp  Problem_decl.hpp  Problem_def.hpp  VectorFunction.hpp
src/hyperbolic/: AbstractHyperbolicLinearStress.hpp  AbstractScalarFunction.hpp  AbstractVectorFunction.hpp  BrinkmanForces.hpp  CriterionAverageSurfacePressure.cpp  CriterionAverageSurfacePressure.hpp  CriterionAverageSurfaceTemperature.cpp  CriterionAverageSurfaceTemperature.hpp  CriterionFlowRate.hpp  CriterionMeanSurfacePressure.cpp  CriterionMeanSurfacePressure.hpp  CriterionMeanSurfaceTemperature.cpp  CriterionMeanSurfaceTemperature.hpp  CriterionMeanTemperature.cpp  CriterionMeanTemperature.hpp  CriterionSurfaceThermalFlux.cpp  CriterionSurfaceThermalFlux.hpp  CriterionThermalCompliance.hpp  CriterionVolume.cpp  CriterionVolume.hpp  CubicMicromorphicInertiaMaterial.cpp  CubicMicromorphicInertiaMaterial.hpp  CubicMicromorphicLinearElasticMaterial.cpp  CubicMicromorphicLinearElasticMaterial.hpp  ElastomechanicsResidual.hpp  ElastomechanicsResidual_decl.hpp  ElastomechanicsResidual_def.hpp  EnergyConservationUtils.hpp  ExpInstMacros.hpp  FluidsCriterionFactory_def.hpp  FluidsFunctionFactory.hpp  FluidsLeastSquaresScalarFunction.hpp  FluidsQuasiImplicit.hpp  FluidsScalarFunction.hpp  FluidsStabilizedUniformThermalSource.hpp  FluidsThermalSourceFactory.hpp  FluidsThermalSources.hpp  FluidsUniformThermalSource.hpp  FluidsUtils.hpp  FluidsVectorFunction.hpp  (+63 more)
src/mesh/: ExodusIO.cpp
src/optimizer/: AugLagDataMng.cpp  (+1 more)
unit_tests/: AnalyzeAppIntxTests.cpp  AugLagStressCriterionTest.cpp  BLASTests.cpp  CMakeLists.txt  ComputationalFluidDynamicsTests.cpp  CrsMatrixUtilsTests.cpp  DerivativeTests.cpp  ElasticTests_Tet10.cpp  ElastoPlasticityTests.cpp  ElastostaticTests.cpp  ElastostaticTotalLagrangianTests.cpp  ElastostaticsTotalLagrangianTests.cpp  ElectroelasticTests.cpp  ElectrostaticsTests.cpp  ElementTests.cpp  EllipticHatchingTests.cpp  EllipticNitscheTests.cpp  EllipticUpdLagTests.cpp  EngineMeshIntxTests.cpp  GeometryMisfitTests.cpp  HeatEquationTests.cpp  IfemTests.cpp  LinearMechanicsNitscheTest.cpp  MassPropertiesTests.cpp  MaterialBasisTest.cpp  PlasticityTests.cpp  PlatoAugLagStressTest.cpp  PlatoFunctorsTest.cpp  PlatoHelmholtzFilterTests.cpp  PlatoMaterialModelTest.cpp  PlatoMathHelpersTest.cpp  PlatoMathTypesTests.cpp  PlatoMeshMapTests.cpp  PlatoMultipointConstraintTests.cpp  PlatoSolverInterfaceTests.cpp  PlatoSpatialModelTests.cpp  PlatoTestHelpers.hpp  PlatoUnitTestMain.cpp  ReadDataTest.cpp  RelaxedMicromorphicTests.cpp  (+13 more)
(+707 files in other folders)
